2002-08-26  Graydon Hoare  <graydon@redhat.com>

	* mf-impl.h: New file, private implementation header.
	* mf-runtime.h: Reorganize a bit.
	(CLAMPSZ): Fix arithmetic.
	(__MF_CACHE_MISS_P): Fix arithmetic.
	* mf-runtime.c: Reorganize a bit.
	(__mf_dynamic): New structure.
	(resolve_single_dynamic): New function.
	(__mf_resolve_dynamics): New function.
	(__mf_init): Initialize dynamic wrappers.
	* mf-hooks.c: Macro-ize __real calls.
	Clamp various bits of arithmetic.
	Add explicit __mf_check call contexts.
	* Makefile.am: Add dependencies on mf-impl.h
	* Makefile.in: Regenerate.
	* configure.in: Comment out shared override.
	* configure: Regenerate.

2002-08-22  Graydon Hoare  <graydon@redhat.com>

	* mf-runtime.c (__mf_process_opts): Sanity-check free_queue_length.
	(__mf_check): Re-inialize and check heuristics before violation.
	(__mf_register): Permit updating pure-guess regions.
	* mf-hooks.c (__wrap_free): Correct some free queue logic.
	(__wrap_dlopen): New wrapper function.
	(__wrap_mmap): New wrapper function.
	(__wrap_munmap): New wrapper function.
	* mf-heuristics.c (__mf_register_ro_sections): Register *all* regions
	which are not stack addresses.
	(is_stack_address): New function.
	(__mf_init_heuristics): Save and restore state, always initialize with
	"starting" state.

2002-08-21  Frank Ch. Eigler  <fche@redhat.com>

	* mf-hooks.c (MF_VALIDATE_EXTENT): Rewrite to correct off-by-one
	error.  Pass location string.
	(wrap_strcpy, wrap_strncpy): Remove extra %s in trace strings.
	* mf-runtime.c (options): Add lc-mask, lc-shift options.
	(__mf_process_opts): Apply some sanity checking for lc-mask.
	(__mf_check, __mf_violation): Take new location-string argument.
	Update callers to pass NULL if necessary.
	(__mf_backtrace): New smart backtracer function.  Calls replace
	several ad-hoc blocks elsewhere.
	(__mf_describe_object): Remove bad reentrancy test.  Improve
	tracing message.
	* mf-runtime.h: Corresponding changes.  Public/private markup.