@@ -1,3 +1,11 @@
+2002-08-27  Graydon Hoare  <graydon@redhat.com>
+
+	* mf-impl.h (WRAPPER): Change to create linker aliases for __wrap
+	and __real when compiled with -DPIC.
+	* mf-hooks.c (WRAPPER): Change all uses of WRAPPER macro slightly.
+	* Makefile.am (AUTOMAKE_OPTIONS): Fix LD_LIBRARY_PATH for tests.
+	* Makefile.in: Regenerate.
+
 2002-08-26  Graydon Hoare  <graydon@redhat.com>
 
 	* mf-impl.h: New file, private implementation header.
